# Tidal-app

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  implementation-report.md
scripts/: build_windows.py  build_windows_installer.py  generate_screenshots.py  pyinstaller_entrypoint.py
src/tidal_playlist_builder/: __about__.py  __init__.py  __main__.py  application.py  configuration.py  exception_handling.py  logging_config.py  workflow.py
src/tidal_playlist_builder/exceptions/: __init__.py
src/tidal_playlist_builder/filtering/: __init__.py  filter_engine.py
src/tidal_playlist_builder/gui/: __init__.py  bootstrap.py  font_fallback.py  main_window.py  resources.py
src/tidal_playlist_builder/model/: __init__.py  album.py  artist.py  duplicate_group.py  enums.py  filter_criteria.py  playlist_build_plan.py  playlist_conflict.py  track.py
src/tidal_playlist_builder/repositories/: __init__.py  album_repository.py  artist_repository.py  playlist_repository.py
src/tidal_playlist_builder/resources/: __init__.py
src/tidal_playlist_builder/services/: __init__.py  cache_service.py  credential_store.py  interfaces.py  json_cache_backend.py  playlist_build_plan_builder.py
src/tidal_playlist_builder/threading/: __init__.py  thread_pool.py  workers.py
src/tidal_playlist_builder/tidal/: __init__.py  api_client.py  http_client.py  provider.py  (+1 more)
tests/: test_application.py  test_cache_service.py  test_exception_handling.py  test_filter_engine.py  test_logging_config.py  test_playlist_build_plan_builder.py  test_workflow_integration.py
tests/gui/: test_album_filter_proxy_model.py  test_album_table_model.py  test_bootstrap.py  test_font_fallback.py  test_main_window.py
tests/threading/: test_workers.py
tests/tidal/: test_http_client.py  test_tidal_playlist_creation_integration.py  test_tidal_provider.py  test_tidalapi_client.py
(+4 files in other folders)
