[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidal-playlist-builder"
dynamic = ["version"]
description = "Desktop app for building TIDAL playlists with duplicate-aware planning."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Dusan Arsenijevic" }
]
keywords = [
  "tidal",
  "playlist",
  "music",
  "pyside6",
  "desktop",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "keyring>=25,<26",
  "PySide6>=6.11,<7",
  "requests>=2.31,<3",
  "tidalapi>=0.8.11,<1",
]

[project.urls]
Homepage = "https://github.com/dusan-arsenijevic/Tidal-app"
Repository = "https://github.com/dusan-arsenijevic/Tidal-app"
Issues = "https://github.com/dusan-arsenijevic/Tidal-app/issues"

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-qt>=4.4",
  "ruff>=0.5",
]
build = [
  "build>=1.2",
  "pyinstaller>=6.0",
  "twine>=6.0",
]

[project.scripts]
tidal-playlist-builder = "tidal_playlist_builder.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tidal_playlist_builder = ["resources/icons/*.svg"]

[tool.setuptools.dynamic]
version = { attr = "tidal_playlist_builder.__about__.__version__" }
